refactor(validators): validate patch values at the request stage per review
Instead of relocating the six validators' checks to the pre-commit hook
(inside the write transaction), keep them in the proposed hook: add PATCH to
each validator's supportedOperations and validate the values carried by the
patch's own add/replace operations. Remove ops, sub-field ops, and values
already stored on the entity are not checked, so cleanup patches and
untouched stored values never block a write, and no validation work (or ES
search, for FormPromptValidator) moves under the row-locked transaction.
Upsert validation is unchanged from master.

Adds PatchOperationUtils (entity-registry) for reading add/replace op values
and reconstructing partial aspects, and a TestPatchMCP fixture.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>