@@ -5,7 +5,6 @@ import static com.linkedin.metadata.Constants.FORM_INFO_ASPECT_NAME;
 
 import com.linkedin.common.urn.Urn;
 import com.linkedin.common.urn.UrnUtils;
-import com.linkedin.events.metadata.ChangeType;
 import com.linkedin.form.FormInfo;
 import com.linkedin.form.FormPrompt;
 import com.linkedin.form.FormPromptArray;
@@ -13,8 +12,6 @@ import com.linkedin.form.FormType;
 import com.linkedin.metadata.aspect.CachingAspectRetriever;
 import com.linkedin.metadata.aspect.GraphRetriever;
 import com.linkedin.metadata.aspect.RetrieverContext;
-import com.linkedin.metadata.aspect.batch.ChangeMCP;
-import com.linkedin.metadata.aspect.plugins.config.AspectPluginConfig;
 import com.linkedin.metadata.aspect.plugins.validation.AspectValidationException;
 import com.linkedin.metadata.entity.SearchRetriever;
 import com.linkedin.metadata.forms.validation.FormPromptValidator;
@@ -26,10 +23,9 @@ import com.linkedin.metadata.search.SearchEntity;
 import com.linkedin.metadata.search.SearchEntityArray;
 import com.linkedin.test.metadata.aspect.TestEntityRegistry;
 import com.linkedin.test.metadata.aspect.batch.TestMCP;
-import io.datahubproject.metadata.context.OperationContext;
+import com.linkedin.test.metadata.aspect.batch.TestPatchMCP;
 import java.util.ArrayList;
 import java.util.Collections;
-import java.util.List;
 import java.util.stream.Stream;
 import org.mockito.Mockito;
 import org.testcontainers.shaded.com.google.common.collect.ImmutableList;
@@ -81,7 +77,7 @@ public class FormPromptValidatorTest {
     // Test validation
     Stream<AspectValidationException> validationResult =
         FormPromptValidator.validateFormInfoUpserts(
-            TestMCP.ofOneMCP(TEST_FORM_URN, formInfo, TEST_REGISTRY), retrieverContext);
+            TestMCP.ofOneUpsertItem(TEST_FORM_URN, formInfo, TEST_REGISTRY), retrieverContext);
 
     // Assert no validation exceptions
     Assert.assertTrue(validationResult.findAny().isEmpty());
@@ -113,7 +109,7 @@ public class FormPromptValidatorTest {
     // Test validation
     Stream<AspectValidationException> validationResult =
         FormPromptValidator.validateFormInfoUpserts(
-            TestMCP.ofOneMCP(TEST_FORM_URN, formInfo, TEST_REGISTRY), retrieverContext);
+            TestMCP.ofOneUpsertItem(TEST_FORM_URN, formInfo, TEST_REGISTRY), retrieverContext);
 
     // Assert validation exception exists
     Assert.assertFalse(validationResult.findAny().isEmpty());
@@ -148,7 +144,7 @@ public class FormPromptValidatorTest {
     // Test validation
     Stream<AspectValidationException> validationResult =
         FormPromptValidator.validateFormInfoUpserts(
-            TestMCP.ofOneMCP(TEST_FORM_URN, formInfo, TEST_REGISTRY), retrieverContext);
+            TestMCP.ofOneUpsertItem(TEST_FORM_URN, formInfo, TEST_REGISTRY), retrieverContext);
 
     // Assert validation exception exists
     Assert.assertFalse(validationResult.findAny().isEmpty());
@@ -179,7 +175,7 @@ public class FormPromptValidatorTest {
     // Test validation
     Stream<AspectValidationException> validationResult =
         FormPromptValidator.validateFormInfoUpserts(
-            TestMCP.ofOneMCP(TEST_FORM_URN, formInfo, TEST_REGISTRY), retrieverContext);
+            TestMCP.ofOneUpsertItem(TEST_FORM_URN, formInfo, TEST_REGISTRY), retrieverContext);
 
     // Assert no validation exceptions
     Assert.assertTrue(validationResult.findAny().isEmpty());
@@ -212,24 +208,19 @@ public class FormPromptValidatorTest {
     // Test validation
     Stream<AspectValidationException> validationResult =
         FormPromptValidator.validateFormInfoUpserts(
-            TestMCP.ofOneMCP(TEST_FORM_URN, formInfo, TEST_REGISTRY), retrieverContext);
+            TestMCP.ofOneUpsertItem(TEST_FORM_URN, formInfo, TEST_REGISTRY), retrieverContext);
 
     // Assert validation exception exists
     Assert.assertFalse(validationResult.findAny().isEmpty());
   }
 
+  /** A prompt added via patch is checked for cross-form uniqueness at the request stage. */
   @Test
-  public void testInvalidMergedUpsertRejectedViaPreCommit() {
-    // A PATCH write (e.g. FormPatchBuilder.add_prompt) is applied into a merged ChangeMCP that
-    // defaults to UPSERT and reaches the pre-commit hook. Drive that merged UPSERT through the
-    // public pre-commit entry point (with the production bean config, which omits PATCH from
-    // supportedOperations) and assert the prompt-rule violation is caught.
-    FormPromptArray prompts = new FormPromptArray();
-    prompts.add(new FormPrompt().setId("test1"));
-    prompts.add(new FormPrompt().setId("test1"));
-    FormInfo formInfo =
-        new FormInfo().setName("test form").setType(FormType.VERIFICATION).setPrompts(prompts);
-
+  public void testPatchAddedPromptCrossFormConflict() {
+    SearchEntity existingForm = new SearchEntity();
+    existingForm.setEntity(TEST_FORM_URN_2);
+    ScrollResult mockResult = new ScrollResult();
+    mockResult.setEntities(new SearchEntityArray(Collections.singletonList(existingForm)));
     Mockito.when(
             mockSearchRetriever.scroll(
                 Mockito.eq(Collections.singletonList(FORM_ENTITY_NAME)),
@@ -238,34 +229,29 @@ public class FormPromptValidatorTest {
                 Mockito.eq(10),
                 Mockito.eq(new ArrayList<>()),
                 Mockito.any(SearchFlags.class)))
-        .thenReturn(new ScrollResult().setEntities(new SearchEntityArray()));
+        .thenReturn(mockResult);
 
-    FormPromptValidator validator =
-        new FormPromptValidator()
-            .setConfig(
-                AspectPluginConfig.builder()
-                    .className(FormPromptValidator.class.getName())
-                    .enabled(true)
-                    .supportedOperations(
-                        List.of("UPSERT", "UPDATE", "CREATE", "CREATE_ENTITY", "RESTATE"))
-                    .supportedEntityAspectNames(
-                        List.of(
-                            AspectPluginConfig.EntityAspectName.builder()
-                                .entityName(FORM_ENTITY_NAME)
-                                .aspectName(FORM_INFO_ASPECT_NAME)
-                                .build()))
-                    .build());
-
-    ChangeMCP mergedUpsert =
-        ((TestMCP) TestMCP.ofOneMCP(TEST_FORM_URN, formInfo, TEST_REGISTRY).iterator().next())
-            .toBuilder().changeType(ChangeType.UPSERT).build();
-
-    OperationContext mockOperationContext = Mockito.mock(OperationContext.class);
+    String ops = "[{\"op\":\"add\",\"path\":\"/prompts/dup1\",\"value\":{\"id\":\"dup1\"}}]";
     Stream<AspectValidationException> validationResult =
-        validator.validatePreCommit(mockOperationContext, List.of(mergedUpsert), retrieverContext);
+        FormPromptValidator.validateFormInfoUpserts(
+            Collections.singletonList(TestPatchMCP.of(TEST_FORM_URN, FORM_INFO_ASPECT_NAME, ops)),
+            retrieverContext);
 
-    // Before the fix the pre-commit hook returned Stream.empty() (count 0); after moving the
-    // checks into pre-commit the merged UPSERT is validated and the duplicate is rejected.
-    Assert.assertTrue(validationResult.count() >= 1);
+    Assert.assertFalse(validationResult.findAny().isEmpty());
+  }
+
+  /** Removes and sub-field ops carry no prompt id — no value check and no search. */
+  @Test
+  public void testPatchRemoveAndSubFieldOpsSkipped() {
+    String ops =
+        "[{\"op\":\"remove\",\"path\":\"/prompts/p1\"},"
+            + "{\"op\":\"replace\",\"path\":\"/prompts/p1/title\",\"value\":\"new title\"}]";
+    Stream<AspectValidationException> validationResult =
+        FormPromptValidator.validateFormInfoUpserts(
+            Collections.singletonList(TestPatchMCP.of(TEST_FORM_URN, FORM_INFO_ASPECT_NAME, ops)),
+            retrieverContext);
+
+    Assert.assertTrue(validationResult.findAny().isEmpty());
+    Mockito.verifyNoInteractions(mockSearchRetriever);
   }
 }
